# cw2

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: ServiceLocator.cpp  ServiceLocator.h
src/dialogs/: BaseDialog.cpp  BaseDialog.h  DrugDialog.cpp  DrugDialog.h  PharmacyDialog.cpp  PharmacyDialog.h  StockDialog.cpp  StockDialog.h
src/models/: BaseRepository.cpp  BaseRepository.h  DrugRepository.cpp  DrugRepository.h  Entities.h  PharmacyRepository.cpp  PharmacyRepository.h  Repository.cpp  Repository.h  Serialization.cpp  Serialization.h
src/pages/: BaseSearchPage.cpp  BaseSearchPage.h  BaseTablePage.cpp  BaseTablePage.h  DrugSearchPage.cpp  DrugSearchPage.h  PharmacyDetailsPage.cpp  PharmacyDetailsPage.h  PharmacySearchPage.cpp  PharmacySearchPage.h
src/resources/: icons.qrc
src/resources/map/: embedded.css  embedded.html  error.css  error.html  error.js  interactive.css  interactive.html  interactive.js  map.qrc
src/resources/style/: index.qss  style.qrc
src/utils/: PharmacyUtils.h  QtHelpers.h
src/widgets/: ActionButtonsDelegate.cpp  ActionButtonsDelegate.h  MapErropView.cpp  MapErropView.h  MapWebView.cpp  MapWebView.h  ScheduleTable.cpp  ScheduleTable.h
